<resources>
    <string name="app_name">PHI Scanner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Name</string>
    <string name="nav_header_subtitle">Mobile</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_psw">Change Password</string>
    <string name="menu_grpo">GRPO-Purchase</string>
    <string name="menu_job_work">Job work Inward</string>
    <string name="menu_sub_con">Sub-con-Inward</string>
    <string name="menu_production">Production Inward</string>
    <string name="menu_delivery">Delivery</string>
    <string name="menu_inv">Inventory Count</string>
    <string name="menu_inv_history">Inventory Count History</string>
    <string name="menu_inv_store_information">Store Information</string>
    <string name="menu_gate_entry">Security Gate Pass</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_barcode">Barcode Generation</string>
    <string name="menu_scan_process">Scanner Process</string>
    <string name="home_second">Home Second</string>
    <string name="menu_products">Products</string>
    <string name="menu_transaction">Transaction</string>
    <string name="menu_my_orders">My Orders</string>
    <string name="search_products">Search Products...</string>
    <string name="search_order">Search Sales Order...</string>
    <string name="products">Products</string>
    <string name="more">more>></string>
    <string name="product_details">atta /n 10KG  </string>
    <string name="view_info">View Detail </string>
    <string name="product_details_price">\u20B9 500 </string>
    <string name="product_qty">  10KG </string>
    <string name="save_changes">Save Changes</string>
    <string name="drop_down_menu">Drop Down Menu</string>
    <string name="networkError">Oh! You are not connected to a wifi or cellular data network. Please connect and try again</string>
    <string name="networkErrorCode">NO_INTERNET_CONNECTION</string>
    <string name="unknownError">Something went wrong!</string>
    <string name="requestTimeOutError">Oops! We couldn’t capture your request in time. Please try again.</string>
    <string name="errorCodeMalformedJson">MALFORMED_JSON</string>
    <string name="responseMalformedJson">Oops! We hit an error. Try again later.</string>
    <string name="errorCodeConnectFailed">Connection failed</string>
    <string name="responseConnectFailed">Oops! Connection timeout.</string>
    <string name="themes">Themes</string>
    <string name="confirm">Confirm</string>
    <string name="item_poster">Item Poster</string>
    <string name="items">Items</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_narasus">Covalsys Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">"Login "</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="invalid_email_password">Invalid Credentials</string>
    <string name="empty_email">Username should not be empty</string>
    <string name="empty_password">Password should not be empty</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="forgot_psw_msg">Do You Want To Change Your Password?</string>
    <string name="forgot_psw_msg2">Confirm your email and we\'ll send the\n instructions</string>
    <string name="user_email">Email Id</string>
    <string name="reset">Reset</string>
    <string name="select_region">Region</string>
    <string name="region_north">North Region</string>
    <string name="region_south">South Region</string>
    <string name="region_east">East Region</string>
    <string name="region_west">West Region</string>
    <string name="due_by_0_30">Due by 0-30</string>
    <string name="due_by_30">Due by 30+</string>
    <string name="due_by_45">Due by 45+</string>
    <string name="due_by_60">Due by 60+</string>
    <string name="due_by_90">Due by 90+</string>
    <string name="due_by_120">Due by 120+</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New Password</string>
    <string name="re_type_new_password">Re-type new password</string>
    <string name="change_pwd">Change Password</string>
    <string name="cart">Cart</string>
    <string name="title_activity_items">Item Details</string>
    <string name="title_activity_cart">Cart</string>
    <string name="title_order_detail">Order Detail</string>
    <string name="sub_total">Sub Total</string>
    <string name="total_qty">Total Quantity</string>
    <string name="menu_complaints">Complaints</string>
    <string name="select_items">Select Item</string>
    <string name="select_complaint">Complaint Type *</string>
    <string name="complaint_remarks">Complaint Description *</string>
    <string name="write_desc">Write description</string>
    <string name="add_image">Add Image</string>
    <string name="image_complaint">Complaint Image</string>
    <string name="select_product">Product Name *</string>
    <string name="add_date">Date *</string>
    <string name="select_date">Select date</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_select">Select Customer</string>
    <string name="vendor_select">Select Vendor</string>
    <string name="business_select">Select Business Type</string>
    <string name="location_select">Select Location</string>
    <string name="brand_name">Brand Name</string>
    <string name="category_name">Category Name</string>
    <string name="product_name">Product Name</string>
    <string name="enter_customer_name">Enter customer name</string>
    <string name="customer_address">Shop Address </string>
    <string name="enter_customer_address">Enter address</string>
    <string name="enter_height">Enter height</string>
    <string name="enter_length">Enter length</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="contact_person">Contact Person *</string>
    <string name="contact_person_hint">Enter contact person</string>
    <string name="mobile_num">Shop Mobile Number *</string>
    <string name="mobile_num_hint">Enter mobile number</string>
    <string name="add_complaint">Add Complaint</string>
    <string name="select_feedback">Feedback Type</string>
    <string name="feedback_remarks">Add Feedback</string>
    <string name="add_rating">Add Ratings</string>
    <string name="menu_feedback">Feedback</string>
    <string name="add_feedback">Add Feedback</string>
    <string name="sales_analysis">Sales Analysis</string>
    <string name="expens">Expenses</string>
    <string name="outstanding_report">Customer Outstanding</string>
    <string name="menu_reports">Reports</string>
    <string name="empty_screen">"We do not have anything\nright now "</string>
    <string name="title_activity_out">Customer Outstanding</string>
    <string name="title_activity_exp">Expense</string>
    <string name="title_activity_sa">Sales Analysis</string>
    <string name="title_activity_checkout">CheckOut</string>
    <string name="title_activity_region">Region</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_leads">Lead Creation</string>
    <string name="select_group">Customer Group</string>
    <string name="select_type">Type</string>
    <string name="reg_no">Registration Number</string>
    <string name="enter_reg_no">Enter registration number</string>
    <string name="vat_no">Vat#</string>
    <string name="enter_vat_no">Enter VAT number</string>
    <string name="select_terms">Payment Terms</string>
    <string name="enter_credit_limit">Enter credit limit</string>
    <string name="owner_name">Owner Name </string>
    <string name="owner_name_lead">Owner Name</string>
    <string name="enter_owner_name">Enter owner name</string>
    <string name="credit_limit">Credit Limit</string>
    <string name="email_id">Email Id</string>
    <string name="lay_latitude"> Latitude </string>
    <string name="lay_longitude"> Longitude </string>
    <string name="lay_location"> Location </string>
    <string name="enter_mobile_no">Enter mobile number</string>
    <string name="enter_email_id">Enter email id</string>
    <string name="enter_block">Enter Block</string>
    <string name="block">Block</string>
    <string name="street">Street</string>
    <string name="enter_street">Enter street name</string>
    <string name="address1">Address </string>
    <string name="enter_address1">Enter address </string>
    <string name="address2">City</string>
    <string name="enter_address2">Enter City</string>
    <string name="enter_state">Enter state</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="enter_country">Enter country</string>
    <string name="pincode">Pincode</string>
    <string name="enter_pincode">Enter pincode</string>
    <string name="geo_location">Geo Location</string>
    <string name="select_location">Select in map</string>
    <string name="gst_type">GST Type *</string>
    <string name="gst_in">GSTIN No *</string>
    <string name="enter_gst_in">Enter GSTIN number</string>
    <string name="adhar">Aadhar Card Number *</string>
    <string name="enter_adhar">Enter adhar card number</string>
    <string name="pan">PAN Card Number *</string>
    <string name="enter_pan">Enter PAN number</string>
    <string name="attach">Attach a photo</string>
    <string name="attachment">Attachment</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="menu_inventory">Inventory</string>
    <string name="menu_history">Customer History</string>
    <string name="menu_outstanding">Customer Outstanding</string>
    <string name="menu_target_com">Target Compliance</string>
    <string name="add_customer">Add Customer</string>
    <string name="title_activity_add_customer">Add Customer</string>
    <string name="search_invoices">Search invoices here...</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_Geo">Geo Location</string>
    <string name="menu_order">Sales Order</string>
    <string name="google_maps_key">AIzaSyDbNOgsDHCwduYj-KbMp65dpkHb94kvMXk</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="update_changes">Update Changes</string>
    <string name="menu_inward">Pallet Inward</string>
    <string name="menu_outward">Pallet Outward</string>
    <string name="title_activity_notification">Notification</string>
    <string name="customer_code">Customer Code</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_settings">Settings</string>
    <string name="address">Address</string>
    <string name="gst_no">GST no</string>
    <string name="customer">Customer</string>
    <string name="distributor">Distributor</string>
    <string name="activity">Activity</string>
    <string name="man_batch">Batch No</string>
    <string name="man_qty">Quantity</string>
    <string name="n_add">Add</string>
</resources>