<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_notification"
        android:icon="@drawable/ic_baseline_notifications_active_24"
        android:title="@string/title_activity_notification"
        android:visible="false"
        app:actionLayout="@layout/notification_icon_layout"
        app:showAsAction="ifRoom" />

    <!--<item
        android:id="@+id/action_count"
        android:icon="@drawable/ic_baseline_notifications_active_24"
        android:title="@string/count_1"
        android:visible="true"
        android:actionLayout="@layout/feed_update_count"
        app:showAsAction="ifRoom">
    </item>-->

    <item
        android:id="@+id/action_cart"
        android:icon="@drawable/ic_shopping_cart_white"
        android:title="@string/cart"
        android:visible="true"
        app:actionLayout="@layout/cart_icon_layout"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sync"
        android:visible="false"
        android:icon="@drawable/ic_baseline_sync_24"
        android:title="@string/activity"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_upload"
        android:visible="false"
        android:icon="@drawable/ic_check_white_24dp"
        android:title="@string/check_out"
        app:showAsAction="ifRoom" />

</menu>
